# vkfetch

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/: Format.hpp  Vendors.inc  VulkanConfig.hpp  VulkanUtil.hpp
source/: Format.cpp  VendorArt.cpp  VendorArt.hpp  VendorArt.inc  VulkanUtil.cpp  main.cpp
source/Art/: AMD.inc  Apple.inc  Google.inc  Intel.inc  Microsoft.inc  Nvidia.inc  Qualcomm.inc  Vulkan.inc
